client/src/style.css
/* ... */
html {
  --brand-purple: #ab68ff;
  --presentation: var(--white);
  --text-primary: var(--gray-800);
  --text-secondary: var(--gray-600);
  --text-secondary-alt: var(--gray-500);
  --text-tertiary: var(--gray-500);
  --text-warning: var(--amber-500);
  --ring-primary: var(--gray-500);
  --header-primary: var(--white);
  --header-hover: var(--gray-50);
  --header-button-hover: var(--gray-50);
  --surface-active: var(--gray-100);
  --surface-active-alt: var(--gray-200);
  --surface-hover: var(--gray-200);
  --surface-hover-alt: var(--gray-300);
  --surface-primary: var(--white);
  --surface-primary-alt: var(--gray-50);
  --surface-primary-contrast: var(--gray-100);
  --surface-secondary: var(--gray-50);
  --surface-secondary-alt: var(--gray-200);
  --surface-tertiary: var(--gray-100);
  --surface-tertiary-alt: var(--white);
  --surface-dialog: var(--white);
  --surface-submit: var(--green-700);
  --surface-submit-hover: var(--green-800);
  --surface-destructive: var(--red-700);
  --surface-destructive-hover: var(--red-800);
  --surface-chat: var(--white);
  --border-light: var(--gray-200);
  --border-medium-alt: var(--gray-300);
  --border-medium: var(--gray-300);
  --border-heavy: var(--gray-400);
  --border-xheavy: var(--gray-500);
  /* These are test styles */

  --background: 0 0% 100%;
  --foreground: 0 0% 3.9%;
  --card: 0 0% 100%;
  --card-foreground: 0 0% 3.9%;
  --primary: 0 0% 9%;
  --primary-foreground: 0 0% 98%;
  --secondary: 0 0% 96.1%;
  --secondary-foreground: 0 0% 9%;
  --muted: 0 0% 96.1%;
  --muted-foreground: 0 0% 45.1%;
  --accent: 0 0% 96.1%;
  --accent-foreground: 0 0% 9%;
  --destructive: 0 84.2% 60.2%;
  --destructive-foreground: 0 0% 98%;
  --border: 0 0% 89.8%;
  --input: 0 0% 89.8%;
  --ring: 0 0% 3.9%;
  --radius: 0.5rem;
  --chart-1: 12 76% 61%;
  --chart-2: 173 58% 39%;
  --chart-3: 197 37% 24%;
  --chart-4: 43 74% 66%;
  --chart-5: 27 87% 67%;
  --switch-unchecked: 0 0% 58%;
}
.dark {
  --brand-purple: #ab68ff;
  --presentation: var(--white);
  --text-primary: var(--gray-100);
  --text-secondary: var(--gray-300);
  --text-secondary-alt: var(--gray-400);
  --text-tertiary: var(--gray-500);
  --text-warning: var(--amber-500);
  --header-primary: var(--gray-700);
  --header-hover: var(--gray-600);
  --header-button-hover: var(--gray-700);
  --surface-active: var(--gray-500);
  --surface-active-alt: var(--gray-700);
  --surface-hover: var(--gray-600);
  --surface-hover-alt: var(--gray-600);
  --surface-primary: var(--gray-900);
  --surface-primary-alt: var(--gray-850);
  --surface-primary-contrast: var(--gray-850);
  --surface-secondary: var(--gray-800);
  --surface-secondary-alt: var(--gray-800);
  --surface-tertiary: var(--gray-700);
  --surface-tertiary-alt: var(--gray-700);
  --surface-dialog: var(--gray-850);
  --surface-submit: var(--green-700);
  --surface-submit-hover: var(--green-800);
  --surface-destructive: var(--red-800);
  --surface-destructive-hover: var(--red-900);
  --surface-chat: var(--gray-700);
  --border-light: var(--gray-700);
  --border-medium-alt: var(--gray-600);
  --border-medium: var(--gray-600);
  --border-heavy: var(--gray-500);
  --border-xheavy: var(--gray-400);
  /* These are test styles */

  --background: 0 0% 7%;
  --foreground: 0 0% 98%;
  --card: 0 0% 3.9%;
  --card-foreground: 0 0% 98%;
  --primary: 0 0% 98%;
  --primary-foreground: 0 0% 9%;
  --secondary: 0 0% 14.9%;
  --secondary-foreground: 0 0% 98%;
  --muted: 0 0% 14.9%;
  --muted-foreground: 0 0% 63.9%;
  --accent: 0 0% 14.9%;
  --accent-foreground: 0 0% 98%;
  --destructive: 0 62.8% 40.6%;
  --destructive-foreground: 0 0% 98%;
  --border: 0 0% 14.9%;
  --input: 0 0% 14.9%;
  --ring: 0 0% 83.1%;
  --chart-1: 220 70% 50%;
  --chart-2: 160 60% 45%;
  --chart-3: 30 80% 55%;
  --chart-4: 280 65% 60%;
  --chart-5: 340 75% 55%;
  --switch-unchecked: 0 0% 40%;
}
.gizmo {
  --text-primary: var(--gizmo-gray-950);
  --text-secondary: var(--gizmo-gray-600);
  --text-tertiary: var(--gizmo-gray-500);
  --surface-primary: var(--white);
  --surface-secondary: var(--gray-50);
  --surface-tertiary: var(--gray-100);
  --border-light: rgba(0, 0, 0, 0.1);
  --border-medium: rgba(0, 0, 0, 0.15);
  --border-heavy: rgba(0, 0, 0, 0.2);
  --border-xheavy: rgba(0, 0, 0, 0.25);
}
.gizmo.dark {
  --text-primary: var(--gray-100);
  --text-secondary: var(--gray-300);
  --text-tertiary: var(--gizmo-gray-500);
  --surface-primary: var(--gray-900);
  --surface-secondary: var(--gray-800);
  --surface-tertiary: var(--gray-700);
  --border-light: rgba(217, 217, 227, 0.1);
  --border-medium: rgba(217, 217, 227, 0.15);
  --border-heavy: rgba(217, 217, 227, 0.2);
  --border-xheavy: rgba(217, 217, 227, 0.25);
}

.text-token-text-primary {
  color: #171717;
  color: var(--text-primary);
}
.text-token-text-secondary {
  color: #565869;
  color: var(--text-secondary);
}
.text-token-text-tertiary {
  color: #8e8ea0;
  color: var(--text-tertiary);
}

.icon-xs {
  stroke-width: 1.5;
  height: 0.75rem;
  width: 0.75rem;
}
.icon-sm {
  stroke-width: 2;
  height: 1rem;
  width: 1rem;
}
.icon-md,
.icon-md-heavy {
  stroke-width: 1.5;
  height: 1.125rem;
  width: 1.125rem;
}
.icon-md-heavy {
  stroke-width: 2.5;
}
.icon-lg {
  stroke-width: 1.5;
  height: 1.5rem;
  width: 1.5rem;
}
.icon-xl {
  stroke-width: 1.5;
  height: 1.75rem;
  width: 1.75rem;
}
.icon-2xl {
  stroke-width: 1.5;
  height: 2rem;
  width: 2rem;
}
.icon-cover {
  stroke-width: 1.5;
  height: 234px;
  width: 234px;
}

.border-token-border-heavy {
  border-color: #c5c5d2;
  border-color: var(--border-heavy);
}

.border-token-border-light {
  border-color: #ececf1;
  border-color: var(--border-light);
}

.border-token-border-medium {
  border-color: #d9d9e3;
  border-color: var(--border-medium);
}

.border-token-surface-primary {
  border-color: #fff;
  border-color: var(--surface-primary);
}

.border-token-surface-secondary {
  border-color: var(--surface-secondary);
}
/* ... */

